# llm-bench

./: .gitignore  README.md  llm-bench.sh  pyproject.toml
configs/flash-attention/: smoke.yaml
configs/flashinfer/: fp4_bench.yaml
configs/vllm/: deepseek_smoke.yaml
src/llm_bench/: __main__.py
src/llm_bench/adapters/: __init__.py  base.py  flash_attention.py  flashinfer.py  vllm.py
src/llm_bench/core/: build.py  build_cache.py  config.py  executor.py  git.py  orchestrator.py  resolved.py  runner.py  server.py  summary.py  utils.py
tests/: conftest.py  test_adapters_flash_attention.py  test_adapters_flashinfer.py  test_adapters_vllm.py  test_config_loading.py  test_example_configs.py  test_loader.py  test_summary.py
