[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-bench"
version = "0.1.0"
description = "Pluggable A/B benchmark and test harness for LLM frameworks (vLLM, FlashInfer, ...)"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "types-PyYAML",
]

[project.scripts]
llm-bench = "llm_bench.__main__:_entrypoint"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",       # pycodestyle errors
    "W",       # pycodestyle warnings
    "F",       # pyflakes
    "I",       # isort
    "UP",      # pyupgrade
    "B",       # bugbear
    "SIM",     # simplify
]
ignore = [
    "E501",    # line-too-long handled by formatter
]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
disallow_untyped_defs = false
no_implicit_optional = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = "yaml"
ignore_missing_imports = true
